Terraform/nat-sg.tf
resource "aws_security_group" "nat-sg" {

  name = "terraform_example"

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
