Terraform/web-sg.tf
resource "aws_security_group" "web-sg" {
  name        = "allow_tlsSecurity group for Frontend"
  description = "Allow http,https,ssh inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "allows https from anywhre"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {
    description = "allows http from anywhre"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {
    description = "allows ssh from anywhre"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    description = "allow access to internet"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "web-sg"
  }
}
